CreateSignatureDevice implemented and general improvements - IDs now are UUIDs - Created utils file - Functions to transform Keys in PEM - Label of a device now is mandatory - Models created - Swagger update
